# thumbkit

./: .gitignore  README.md  main.py  mcp.template.json  pyproject.toml
docs/: CLI_REFERENCE.md  Resources.md  prompting-guidelines.md
nanobanana/: cli.py  core.py  mcp_server.py
thumbkit/: CLI_REFERENCE.md  __init__.py  cli.py  core.py  mcp_server.py  system_prompt.md
