[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "thumbkit"
version = "0.1.0"
description = "YouTube thumbnail generator MCP server + CLI (Gemini Nano Banana model)"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastmcp>=2.12.5",
    "google-genai>=1.45.0",
    "python-dotenv>=1.1.1",
]

[project.scripts]
thumbkit = "thumbkit.cli:main"
thumbkit-mcp = "thumbkit.mcp_server:main"

[tool.hatch.build.targets.wheel]
packages = ["thumbkit"]

[tool.hatch.build]
include = [
    "thumbkit/**/*.py",
    "thumbkit/system_prompt.md",
    "thumbkit/CLI_REFERENCE.md",
]
